@@ -1,3 +1,10 @@
+<%- if table.align %>
+  <%- if table.align == 'center' -%>
+    \begin{center}
+  <%- elif table.align in ('left', 'right') -%>
+    \begin{flush<%= table.align%>}
+  <%- endif -%>
+<% endif -%>
 <%- if table.caption -%>
 \begin{threeparttable}
 \capstart\caption{<%= ''.join(table.caption) %>}<%= labels %>
@@ -7,6 +14,13 @@
 <%= ''.join(table.header) %>
 <%=- ''.join(table.body) %>
 \end{tabulary}
+<%- if table.align %>
+  <%- if table.align == 'center' -%>
+    \end{center}
+  <%- elif table.align in ('left', 'right') -%>
+    \end{flush<%= table.align%>}
+  <% endif -%>
+<% endif -%>
 <%- if table.caption %>
 \end{threeparttable}
 <%- endif %>
