@@ -43,6 +43,35 @@ table having :widths: option
    cell3-1 cell3-2
    ======= =======
 
+table having :align: option (tabulary)
+--------------------------------------
+
+.. table::
+   :align: center
+
+   ======= =======
+   header1 header2
+   ======= =======
+   cell1-1 cell1-2
+   cell2-1 cell2-2
+   cell3-1 cell3-2
+   ======= =======
+
+table having :align: option (tabular)
+-------------------------------------
+
+.. table::
+   :align: left
+   :widths: 30,70
+
+   ======= =======
+   header1 header2
+   ======= =======
+   cell1-1 cell1-2
+   cell2-1 cell2-2
+   cell3-1 cell3-2
+   ======= =======
+
 table with tabularcolumn
 ------------------------
 
